Revision history for Perl extension AnyEvent.

	- don't generate spurious readyness notifications when select
          returns EINTR in the pure perl backend (analysed and testcase
          by Bas Denissen).
        - provider faster implementations for AE::time/now/now_update for
          EV and Perl backends.
        - provide faster AE::cv and AE::time implementations for all
          backends.
        - no longer support lower/mixed-case signal names (this was
          never documented nor universally supported).
        - some more memory µ-optimisations, and somewhat less messy
          code to cope with both AnyEvent and AE APIs.

5.251 Sat Mar 13 00:58:21 CET 2010
        - make test failed if it was run before make install on perl <=
          5.8.8, and older versions of perl make our live very difficult,
          so write constants.pl during Makefile.PL time.

5.25  Sat Mar 13 00:23:14 CET 2010
	- fix a race condition in AnyEvent::Handle that would cause
          a "bio_read: unsupported method" error (in _another_
          ssl connection) after user code threw an exception.
        - added AnyEvent::Handle->destroyed method.
	- speed up AnyEvent::Socket::format_address and ::format_ipv6.
        - the AnyEvent::Util::fh_nonblocking function worked only
          by lucky accident on win32.
        - smaller and faster AnyEvent::Util::fh_nonblocking.
        - when the (required!) Time::HiRes module is missing, AnyEvent
          did not fall back to built-in time properly.
        - do not load Fcntl at runtime, saving memory and loading time.
        - precompile a number of constants and use them instead of runtime
          detection and eval.
        - free detection code after detection and similar memory optimisations.
        - Perl backend timer interval best effort drift has been improved
          (same algorithm as EV).
        - update unicode idna mapping table.

5.24  Tue Jan  5 11:39:43 CET 2010